--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,7 +8,7 @@ body {
 
 @layer base {
   :root {
-    --background: 204 100% 97%;
+    --background: 224 71% 97%;
     --foreground: 222 47% 11%;
     --card: 0 0% 100%;
     --card-foreground: 222 47% 11%;
@@ -24,7 +24,7 @@ body {
     --accent-foreground: 222 47% 11%;
     --destructive: 5 74% 50%;
     --destructive-foreground: 0 0% 98%;
-    --success: 160 100% 35%;
+    --success: 142 71% 45%;
     --success-foreground: 0 0% 100%;
     --warning: 45 100% 51%;
     --warning-foreground: 222 47% 11%;
@@ -91,6 +91,6 @@ body {
     @apply border-border;
   }
   body {
-    @apply bg-secondary text-foreground;
+    @apply bg-background text-foreground;
   }
 }
